--- a/src/components/adidas/Adidas.css
+++ b/src/components/adidas/Adidas.css
@@ -13,7 +13,8 @@
   font-weight: 500;
   line-height: 82.5px;
   text-align: left;
-  width: 570px;
+  max-width: 570px;
+  width: 100%;
 }
 .adidas_texts p {
   font-size: 24px;
@@ -21,7 +22,8 @@
   line-height: 36px;
   text-align: left;
   padding: 24px 0 12px;
-  width: 600px;
+  max-width: 600px;
+  width: 100%;
 }
 .adidas_texts h4 {
   font-size: 20px;
@@ -50,5 +52,11 @@
 @media (max-width: 700px) {
   .adidas_contents .adidas_image {
     width: 520px !important;
+  }
+  .adidas_texts h3 {
+    font-size: 48px !important;
+  }
+  .adidas_contents p {
+    font-size: 20px !important;
   }
 }
