--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -94,7 +94,9 @@
     padding-top: 24px !important;
   }
   .footer_bottom {
+    flex-wrap: wrap;
     gap: 12px;
     justify-content: center;
+    margin-bottom: 60px;
   }
 }
