--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -5,7 +5,6 @@
   font-family: Poppins;
   background-repeat: no-repeat;
   background-size: cover;
-  /* background: linear-gradient(180deg, #000000 -73.06%, rgba(0, 0, 0, 0) 100%); */
 }
 .hero_contents h2 {
   font-size: 64px;
@@ -13,7 +12,8 @@
   line-height: 96px;
   letter-spacing: 0.5px;
   color: #fff;
-  width: 570px;
+  max-width: 570px;
+  width: 100%;
   padding-top: 16%;
 }
 .hero_cards {
@@ -82,8 +82,8 @@
 }
 .third {
   position: absolute;
-  top: 100px;
-  left: 50px;
+  top: 90px;
+  right: 50px;
 }
 .even {
   position: absolute;
@@ -95,5 +95,10 @@
     flex-wrap: wrap;
     justify-content: center !important;
     gap: 12px;
+  }
+}
+@media (max-width: 700px) {
+  .hero_contents h2 {
+    font-size: 48px;
   }
 }
